# formant-spot-adapter

./: .dockerignore  .gitignore  AGENTS.md  CMakeLists.txt  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  IMPLEMENTATION_HISTORY.md  PLAN.md  README.md  SECURITY.md  compose.yaml
.github/workflows/: deploy-map-navigation.yml
cmake/eigen3-shim/: Eigen3Config.cmake
cmake/grpc-shim/: gRPCConfig.cmake
config/: formant-spot-adapter.env.example  formant-spot-adapter.json  formant-spot-adapter.json.example
docs/: formant-localization-map-analysis.md  formant-streams.md  graphnav-teleop-implementation-notes.md  professional-nav-interface-plan.md
include/formant_spot_adapter/: adapter.hpp  config.hpp  formant_agent_client.hpp  graphnav_map_render.hpp  spot_check_client.hpp  spot_client.hpp
proto/: README.md  adapter_config.proto  formant_agent.proto  formant_model.proto
proto/protos/model/v1/: navigation.proto
scripts/: arm_state.sh  bootstrap_ubuntu.sh  build.sh  camera_calibration.py  camera_calibration.sh  deploy.sh  docker_build.sh  docker_common.sh  docker_deploy.sh  docker_down.sh  docker_logs.sh  docker_run.sh  docker_status.sh  docker_uninstall.sh  docker_up.sh  docker_update.sh  ensure_spot_sdk.sh  install.sh  prepare_spot_sdk.py  print_arm_state.py  protoc-gen-grpc  run.sh  service_logs.sh  service_status.sh  setup_logrotate.sh  setup_service.sh  start_service.sh  sync_formant_protos.sh  uninstall.sh  update.sh
src/: adapter.cpp  config.cpp  formant_agent_client.cpp  graphnav_map_render.cpp  image_pull_benchmark.cpp  main.cpp  spot_check_client.cpp  spot_client.cpp
systemd/: formant-spot-adapter.service
tests/: graphnav_map_render_test.cpp
ui/: pages-index.html
ui/map-navigation/: README.md  index.html  package-lock.json  package.json  tsconfig.json  tsconfig.tsbuildinfo  vite.config.ts
ui/map-navigation/public/: config.schema.json
ui/map-navigation/src/: App.js  App.tsx  formant-sdk.d.ts  formant.js  formant.ts  main.tsx  mapMath.js  mapMath.ts  sdkEnvironment.ts  statusModel.ts  types.ts
